fix(ui): reposition map export label
Map export label was overlapping with the close button.

Closes #10964

--- a/src/css/toolbar/map-export.less
+++ b/src/css/toolbar/map-export.less
@@ -57,6 +57,7 @@
 
         > header h2 {
             max-width: calc(~'100% - 25px');
+            border-bottom: none;
         }
     }
 
